# Hadeel-unit-testing

./: CMakeLists.txt  README.md
src/: Main.cpp
tests/: GennemsnitsTest.cpp
